Fix column alignment and icon size

--- a/src/ng-app/app/aquaris-control/aquaris-control.component.scss
+++ b/src/ng-app/app/aquaris-control/aquaris-control.component.scss
@@ -46,7 +46,7 @@ button {
         .category {
             display: flex;
             flex-flow: column nowrap;
-            justify-content: space-around;
+            justify-content: space-between;
             align-items: center;
 
             width: 100%;
@@ -54,6 +54,7 @@ button {
             header {
                 display: flex;
                 flex-flow: column nowrap;
+                margin-bottom: 20px;
             }
 
             .label {
